--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineMatch - Discover Your Next Favorite Film</title>
+    <!-- Google Fonts: Inter for body/subheadings, Playfair Display for headings -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -24,7 +26,8 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            /* Use Inter for all body and subheading text */
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             background-color: var(--background);
             color: var(--text);
             line-height: 1.6;
@@ -37,10 +40,13 @@
             width: 100%;
         }
 
-        h1 { font-size: 3rem; font-weight: 700; margin-bottom: 1rem; }
-        h2 { font-size: 2rem; font-weight: 600; margin-bottom: 1rem; }
-        h3 { font-size: 1.5rem; font-weight: 600; margin-bottom: 0.75rem; }
-        h4 { font-size: 1.125rem; font-weight: 600; margin-bottom: 0.5rem; }
+    /* Headings use Playfair Display for a classic display serif */
+    h1, h2, h3, h4, h5, h6 { font-family: 'Playfair Display', Georgia, 'Times New Roman', serif; }
+
+    h1 { font-size: 3rem; font-weight: 700; margin-bottom: 1rem; }
+    h2 { font-size: 2rem; font-weight: 600; margin-bottom: 1rem; }
+    h3 { font-size: 1.5rem; font-weight: 600; margin-bottom: 0.75rem; }
+    h4 { font-size: 1.125rem; font-weight: 600; margin-bottom: 0.5rem; }
 
         /* Header */
                /* Header */
